@@ -2,10 +2,12 @@ CONSOLE MESSAGE: line 12: [object HTMLDocument]
 CONSOLE MESSAGE: line 13: [object DocumentFragment]
 CONSOLE MESSAGE: line 14: [object HTMLParagraphElement]
 CONSOLE MESSAGE: line 15: [object HTMLParagraphElement]
+CONSOLE MESSAGE: line 16: [object HTMLDocument],[object DocumentFragment],[object HTMLSpanElement]
 Tests that console logging dumps proper messages.
 
 #document console-dirxml.html:12
 #document-fragment console-dirxml.html:13
 <p></p> console-dirxml.html:14
-Array[1] console-dirxml.html:15
+[p] console-dirxml.html:15
+[#document, #document-fragment, <span></span>] console-dirxml.html:16
 
