@@ -1,3 +1,15 @@
+2012-12-10  Pavel Feldman  <pfeldman@chromium.org>
+
+        Web Inspector: console broken? - console.dirxml behaves like console.log
+        https://bugs.webkit.org/show_bug.cgi?id=104245
+
+        Reviewed by Vsevolod Vlasov.
+
+        Do not generate preview for dirxml.
+
+        * inspector/front-end/ConsoleMessage.js:
+        (WebInspector.ConsoleMessageImpl.prototype._formatParameterAsArray):
+
 2012-12-10  Kent Tamura  <tkent@chromium.org>
 
         Refactoring: Remove HTMLFormControlElement::setDisabled
