@@ -1,3 +1,14 @@
+2012-12-10  Pavel Feldman  <pfeldman@chromium.org>
+
+        Web Inspector: console broken? - console.dirxml behaves like console.log
+        https://bugs.webkit.org/show_bug.cgi?id=104245
+
+        Reviewed by Vsevolod Vlasov.
+
+        * inspector/console/console-dirxml-expected.txt:
+        * inspector/console/console-dirxml.html:
+        * platform/chromium/TestExpectations:
+
 2012-12-10  Christophe Dumez  <christophe.dumez@intel.com>
 
         Unreviewed EFL gardening.
